--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,12 +9,10 @@
 
 html,
 body {
-  max-width: 100vw;
-  height: 100%;
-
-  overflow-x: hidden;
   background-color: $primary;
   color: $text;
+
+  font-family: $font;
 }
 
 a {
