--- a/src/app/(public)/layout.module.scss
+++ b/src/app/(public)/layout.module.scss
@@ -1,5 +1,15 @@
 .main {
-  background: #3C3B3F;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(60deg, #605C3C, #3C3B3F);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(60deg, #605C3C, #3C3B3F); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0f0c29; /* fallback for old browsers */
+  background: -webkit-linear-gradient(3deg, #24243e, #302b63, #0f0c29); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    3deg,
+    #24243e,
+    #302b63,
+    #0f0c29
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
