--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,3 +19,23 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+ /* width */
+ ::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
