--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,13 +15,17 @@ body {
   font-family: $font;
 }
 
+body {
+  min-height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
- /* width */
- ::-webkit-scrollbar {
+/* width */
+::-webkit-scrollbar {
   width: 1px;
 }
 
