--- a/src/components/layout/modal.module.scss
+++ b/src/components/layout/modal.module.scss
@@ -2,11 +2,15 @@
 
 .main {
   z-index: $z-modal;
-  background-color: $primary;
 
   width: min(50ch, 100%);
-  padding: 1rem;
+
+  padding: 2rem;
+
+  background-color: $primary;
+
   border-radius: $borderRadius;
+  border: 2px solid rgba($text, 0.4);
 }
 
 .overlay {
@@ -28,7 +32,12 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+
+  & h1 {
+    @include header1;
+  }
 }
+
 
 .close {
   background-color: transparent;
