--- a/src/components/layout/modal.module.scss
+++ b/src/components/layout/modal.module.scss
@@ -5,8 +5,6 @@
 
   width: min(50ch, 100%);
 
-  padding: 2rem;
-
   background-color: $primary;
 
   border-radius: $borderRadius;
@@ -32,12 +30,16 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+  padding: 2rem;
 
   & h1 {
     @include header1;
   }
 }
 
+.content {
+  padding: 2rem;
+}
 
 .close {
   background-color: transparent;
