--- a/src/styles/form.module.scss
+++ b/src/styles/form.module.scss
@@ -6,7 +6,8 @@
 
   & input,
   & textarea,
-  & select {
+  & select,
+  & button {
     color: $text;
     background-color: transparent;
 
@@ -21,6 +22,25 @@
     &:focus {
       outline: transparent;
       outline: 3px solid rgba($text, 0.4);
+    }
+  }
+
+  & button {
+    transform: scale(1);
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
+    &:active {
+      transform: scale(1);
+    }
+
+    &[type="submit"] {
+      background-color: $text;
+      color: $primary;
     }
   }
 }
