--- a/src/app/(public)/job/[id]/_components/createRequest.module.scss
+++ b/src/app/(public)/job/[id]/_components/createRequest.module.scss
@@ -1,14 +1,28 @@
 @use "@styles/abstracts" as *;
 
 .button {
-  @include section;
-  background-color: transparent;
-  color: $text;
-  font-size: 1.2rem;
-  font-weight: 400;
-  color: black;
-  background-color: rgba($text, 0.4);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  background-color: $text;
+  color: $primary;
+  border: none;
+  border-radius: $borderRadius;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+
+  transform: scale(1);
+  transition: all 0.2s ease-in-out;
+
+  &:hover,
+  &:focus-visible {
+    transform: scale(1.05);
+  }
+
+  &:active {
+    transform: scale(0.95);
+  }
+
+  &:disabled {
+    transform: scale(1);
+    background-color: rgba($text, 0.5);
+    cursor: not-allowed;
+  }
 }
