--- a/src/app/(public)/user/[id]/page.module.scss
+++ b/src/app/(public)/user/[id]/page.module.scss
@@ -20,7 +20,7 @@
 
 .section {
   padding: 1rem;
-  border: 2px solid rgba($text, 0.4);
+  border: 2px solid $outline;
   border-radius: 0.5rem;
 }
 
