--- a/src/styles/abstracts/_theme.scss
+++ b/src/styles/abstracts/_theme.scss
@@ -7,10 +7,10 @@ $secondary: #262626;
 
 $tertiary: #404040;
 
-$accent: #BF8D50;
+$accent: #bf8d50;
 
 $borderRadius: 0.5rem;
-
+$outline: rgba($text, 0.4);
 
 $success: #00b300;
-$error: #ff0000;
+$error: #c68f8f;
