--- a/src/components/review/reviews.module.scss
+++ b/src/components/review/reviews.module.scss
@@ -1,3 +1,6 @@
+@use "@styles/abstracts" as *;
+
+
 .reviews {
   width: 100%;
   overflow-x: auto;
@@ -7,4 +10,6 @@
   gap: 1rem;
 
   padding-bottom: 1rem;
+
+  @include animate;
 }
