--- a/src/styles/abstracts/_utils.scss
+++ b/src/styles/abstracts/_utils.scss
@@ -70,3 +70,32 @@
     cursor: not-allowed;
   }
 }
+
+@keyframes animateIn {
+  0% {
+    opacity: 0;
+    transform: translateY(60px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@mixin animate($animationName: animateIn) {
+  & > * {
+    @include PropagateAnimation($animationName);
+  }
+}
+
+@mixin PropagateAnimation($animationName: animateIn, $delay: 0.1s) {
+  animation-name: $animationName;
+  animation-duration: 350ms;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
+  @for $i from 1 through 50 {
+    &:nth-child(#{$i}) {
+      animation-delay: $delay * $i;
+    }
+  }
+}
