--- a/src/app/(public)/job/[id]/page.module.scss
+++ b/src/app/(public)/job/[id]/page.module.scss
@@ -8,6 +8,8 @@
 
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  align-content: flex-start;
 
   & > * {
     flex-grow: 1;
