--- a/src/app/(public)/request/page.module.scss
+++ b/src/app/(public)/request/page.module.scss
@@ -1,3 +1,9 @@
 .main {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: flex-start;
+  align-content: flex-start;
+  text-align: center;
 }
